--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,8 @@ a{
   margin: 0;
 }
 
+
+
 .field-container{
   margin-top: 3%;
 }
@@ -128,7 +130,7 @@ a{
 }
 
 .field-container input{
-  background-color: black;
+  background-color: #151515;
   outline: none;
   border: 1px solid #eaeade;
   width: 100%;
@@ -142,7 +144,7 @@ a{
 }
 
 .field-container textarea{
-  background-color: black;
+  background-color: #151515;
   outline: none;
   border: 1px solid #eaeade;
   width: 100%;
@@ -242,19 +244,18 @@ hr{
 }
 
 #about{
-  
   margin-right: 5%;
 }
 
-#something{
-  
+.sub-categories{
+  width: 80%;
 }
-
 .sub-categories p{
   font-size: 1rem;
   color: rgb(99, 99, 99);
   margin: 0;
 }
+
 
 #hamburger-container{
   position: absolute;
@@ -263,6 +264,9 @@ hr{
   cursor: pointer;
   z-index: 1000;
   position: fixed;
+  /* background-color: red; */
+  /* padding: 2%; */
+  border: 0px solid #eaeade;
 }
 
 #hamburger-menu-container{
@@ -511,6 +515,7 @@ hr{
   margin: 3%;
   margin-left: 0;
   background-color: #1c1c1c;
+  /* background-color: #0c0c0c; */
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -520,12 +525,12 @@ hr{
   /* border-radius: 5px; */
   color: #eaeade;
   
-  transition: 0.5s;
+  transition: 0.2s;
 }
 
 .card-child:hover{
   transform: translateY(-5px);
-  box-shadow: -0px 25px 25px 10px #040404;
+  box-shadow: 0px 20px 50px 10px #040404;
 }
 
 .card-child > img{
@@ -551,4 +556,22 @@ hr{
   width: 10%;
   margin: 2%;
   border-radius: 5px;
+}
+
+
+
+/* media queries */
+@media only screen and (max-width:1000px){
+
+  body,html{
+    font-size: 6px;
+  }
+
+  /* .title{
+    font-size: 5rem;
+  } */
+
+  .row{
+    flex-wrap:wrap
+  }
 }
