--- a/src/App.css
+++ b/src/App.css
@@ -289,7 +289,7 @@ hr{
   height: 100%;
   background-color: rgb(14, 14, 14);
   background-color: rgba(0, 0, 0, 0.95);
-  background-color: hsla(0, 0%, 8%, 0.95);
+  background-color: #151515;
   /* border: 1px solid white; */
   color: white;
   font-size: 3rem;
@@ -504,7 +504,7 @@ hr{
   padding: 5%;
   transition: 0.2s;
   cursor: pointer;
-  margin: 5%;
+  width: 50%;
 }
 
 .card-button:hover{
@@ -514,8 +514,7 @@ hr{
 
 .card-child{
   max-width: 350px;
-  min-height:500px;
-  padding: 2%;
+  padding: 5%;
   text-align: center;
   margin: 3%;
   margin-left: 0;
@@ -532,6 +531,8 @@ hr{
   box-shadow: 0px 1px 0px 0px #040404;
   transition: 0.2s;
 }
+
+
 
 .card-child:hover{
   transform: translateY(-5px);
@@ -551,14 +552,15 @@ hr{
 }
 
 .language-container{
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: wrap; */
 
 }
 
 .card-language-image{
   width: 10%;
+  height: auto;
   margin: 2%;
   border-radius: 5px;
 }
@@ -582,5 +584,8 @@ hr{
   }
   .slidebar-menu-items p{
     font-size: 5rem;
+  }
+  .card-child-description{
+    font-size: 2rem;
   }
 }
