--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ a{
 }
 
 .title-container{
-  width: 50%;
+  /* width: 50%; */
 }
 
 #about-container{
@@ -496,6 +496,10 @@ hr{
   align-items: center;
 }
 
+.card-button-container{
+  width: 100%;
+}
+
 .card-button{
   background-color: transparent;
   border: 1px solid #eaeade;
@@ -504,7 +508,7 @@ hr{
   padding: 5%;
   transition: 0.2s;
   cursor: pointer;
-  width: 50%;
+  /* width: 50%; */
 }
 
 .card-button:hover{
@@ -513,7 +517,7 @@ hr{
 }
 
 .card-child{
-  max-width: 350px;
+  /* max-width: 350px; */
   height: 70vh;
   padding: 2%;
   text-align: center;
@@ -522,9 +526,9 @@ hr{
   background-color: #1c1c1c;
   /* background-color: #0c0c0c; */
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   /* border: 1px solid #eaeade; */
   border-radius: 0px;
@@ -532,8 +536,8 @@ hr{
   box-shadow: 0px 1px 0px 0px #040404;
   transition: 0.2s;
 
-  width: 400px;
-  height: 500px;
+  width: 350px;
+  /* height: 500px; */
 }
 
 
@@ -543,13 +547,15 @@ hr{
   box-shadow: 2px 10px 10px 0px #040404;
 }
 
-.card-child > img{
+.card-image-container > img{
   opacity: 0.7;
-  width: 40%;
+  /* width: 40%; */
   border-radius: 10px;
   cursor: pointer;
   transition: 0.2s;
 }
+
+
 
 .card-child > img:hover{
   opacity: 1;
@@ -588,7 +594,7 @@ footer{
     flex-wrap:wrap
   }
   .page-container{
-    margin: 10%;
+    margin: 15%;
   }
   .sub-categories p{
     font-size: 2rem;
@@ -600,6 +606,8 @@ footer{
     font-size: 2rem;
   }
   .card-child{
-    height: 50vh;
+    /* height: 50vh; */
+    padding: 5%;
+    /* margin: 0 auto; */
   }
 }
