--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@ html,body{
   background-size: cover; */
 }
 
-
 a{
   text-decoration: none;
   color: white;
@@ -600,10 +599,52 @@ hr{
 footer{
   text-align: center;
   color: white;
-  padding: 5%;
+  padding: 3%;
   background-color: #080808;
 }
 
+#preloader-container{
+  top: 0;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: #151515;
+  z-index: 10000;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  opacity: 1;
+}
+
+.preloader-hide{
+  
+  animation-name: hide-preloader;
+  animation-duration: .2s;
+}
+
+@keyframes hide-preloader{
+  from{
+    opacity: 1;
+  }
+  to{
+    opacity: 0;
+  }
+}
+
+#animation-section {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.animation-children{
+  margin: 5%;
+  margin-left: 0;
+  margin-top: 0;
+  border: 0px solid #eaeade;
+}
 
 
 /* media queries */
