Updated contact form

--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ a{
 }
 
 #submit-button:hover{
-  background-color: black;
+  background-color: #151515;
   border: 1px solid #eaeade;
   color: #eaeade;
 }
@@ -658,6 +658,9 @@ footer{
 }
 
 
+
+
+
 /* media queries */
 @media only screen and (max-width:700px){
 
@@ -690,4 +693,132 @@ footer{
   #youtube-container iframe{
     width: 100%;
   }
+}
+
+
+
+
+
+
+
+
+
+
+
+/* basic stylings ------------------------------------------ */
+
+.container 		{ 
+  /* font-family:'Roboto'; */
+  /* width:600px;  */
+  margin:30px auto 0; 
+  display:block; 
+  /* background:#FFF;
+  padding:10px 50px 50px; */
+}
+h2 		 { 
+  text-align:center; 
+  margin-bottom:50px; 
+}
+h2 small { 
+  font-weight:normal; 
+  color:#888; 
+  display:block; 
+}
+.footer 	{ text-align:center; }
+.footer a  { color:#53B2C8; }
+
+/* form starting stylings ------------------------------- */
+.group 			  { 
+  position:relative; 
+  margin-bottom:45px; 
+}
+.container input {
+  font-family: 'Roboto';
+  font-size:2rem;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:100%;
+  border:none;
+  border-bottom:1px solid #757575;
+  background-color: #151515;
+  caret-color: #eaeade;
+  color: #eaeade;
+}
+input:focus 		{ outline:none; }
+
+/* LABEL ======================================= */
+label 				 {
+  color:#999; 
+  font-size:2rem;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+
+/* active state */
+input:focus ~ label, input:valid ~ label 		{
+  top:-20px;
+  font-size:14px;
+  color:#eaeade;
+}
+/* BOTTOM BARS ================================= */
+.bar 	{ position:relative; display:block; width:100%; }
+.bar:before, .bar:after 	{
+  content:'';
+  height:2px; 
+  width:0;
+  bottom:1px; 
+  position:absolute;
+  background:#eaeade; 
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+.bar:before {
+  left:50%;
+}
+.bar:after {
+  right:50%; 
+}
+
+/* active state */
+input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.highlight {
+  position:absolute;
+  height:60%; 
+  width:100px; 
+  top:25%; 
+  left:0;
+  pointer-events:none;
+  opacity:0.5;
+}
+
+/* active state */
+input:focus ~ .highlight {
+  -webkit-animation:inputHighlighter 0.3s ease;
+  -moz-animation:inputHighlighter 0.3s ease;
+  animation:inputHighlighter 0.3s ease;
+}
+
+/* ANIMATIONS ================ */
+@-webkit-keyframes inputHighlighter {
+	from { background:#eaeade; }
+  to 	{ width:0; background:transparent; }
+}
+@-moz-keyframes inputHighlighter {
+	from { background:#eaeade; }
+  to 	{ width:0; background:transparent; }
+}
+@keyframes inputHighlighter {
+	from { background:#eaeade; }
+  to 	{ width:0; background:transparent; }
 }
