--- a/src/App.css
+++ b/src/App.css
@@ -433,6 +433,14 @@ hr{
   margin-bottom: 5%;
 }
 
+#youtube-link:hover{
+  color:#c4302b
+}
+
+#twitch-link:hover{
+  color: #6441a5
+}
+
 #youtube-container iframe{
   /* width: 100%; */
 }
@@ -606,7 +614,7 @@ footer{
 
 #preloader-container{
   top: 0;
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   background-color: #151515;
