--- a/src/App.css
+++ b/src/App.css
@@ -830,3 +830,15 @@ input:focus ~ .highlight {
 	from { background:#eaeade; }
   to 	{ width:0; background:transparent; }
 }
+
+.thanks-container{
+  position: absolute;
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  text-align:center;
+  justify-content: center;
+  flex-direction: column;
+  color: #eaeade;
+}
