--- a/src/App.css
+++ b/src/App.css
@@ -408,22 +408,14 @@ hr{
 
 
 #social-container{
-  /* background-color: orange; */
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
-.fa-icon{
-  color: white;
-  opacity: 0.2;
-  transition: 0.2s;
-  cursor: pointer;
+.social-icon-child{
+  margin:1%;
 }
-.fa-icon:hover{
-  opacity: 1;
-}
-
 
 /* youtube */
 #youtube-container{
